force-app/main/default/objects/Coin__c/Coin__c.object-meta.xml
<CustomObject>
    <label>Coin</label>
    <nameField>
        <label>Coin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>