force-app/main/default/objects/Coin__c/fields/CoinMarketCap_URL__c.field-meta.xml
<CustomField>
    <fullName>CoinMarketCap_URL__c</fullName>
    <label>CoinMarketCap URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>