force-app/main/default/objects/Coin__c/fields/Market_Cap_USD__c.field-meta.xml
<CustomField>
    <fullName>Market_Cap_USD__c</fullName>
    <label>Market Cap (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>